# BloxScripts

./: .gitignore  CMakeLists.txt
src/app/: CMakeLists.txt  main.c
src/client/: CMakeLists.txt  coreState.c  coreState.h
src/common/: CMakeLists.txt  encoding.c  encoding.h  packets.c  packets.h  player.h  protocol.c  protocol.h
src/math/: CMakeLists.txt  defines.h  functions.c
src/platform/: CMakeLists.txt  macos.h  macos.m  win32.h
src/server/: CMakeLists.txt  coreState.c  coreState.h  players.c  players.h  worker.c  worker.h  world.h
