if(APPLE)
    file(GLOB_RECURSE PLATFORM_SOURCES CONFIGURE_DEPENDS *.m)
endif()

if(PLATFORM_SOURCES)
    add_library(platform STATIC ${PLATFORM_SOURCES})
    target_include_directories(platform PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..)
    target_link_libraries(platform PUBLIC proj_c_flags)
else()
    add_library(platform INTERFACE)
endif()
